--- a/SyllableApplication/composer.json
+++ b/SyllableApplication/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
         "phpmd/phpmd": "^2.6",
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.3",
+        "phpunit/phpunit": "7"
     }
 }
