--- a/SyllableApplication/composer.json
+++ b/SyllableApplication/composer.json
@@ -1,7 +1,12 @@
 {
-    "require-dev": {
-        "phpmd/phpmd": "^2.6",
-        "squizlabs/php_codesniffer": "^3.3",
-        "phpunit/phpunit": "7"
+  "autoload": {
+    "psr-4" : {
+        "SyllableApplication\\" : "Method/"
     }
+  },
+  "require-dev": {
+    "phpmd/phpmd": "^2.6",
+    "squizlabs/php_codesniffer": "^3.3",
+    "phpunit/phpunit": "^7"
+  }
 }
