--- a/SyllableApplication/composer.json
+++ b/SyllableApplication/composer.json
@@ -7,6 +7,7 @@
   "require-dev": {
     "phpmd/phpmd": "^2.6",
     "squizlabs/php_codesniffer": "^3.3",
-    "phpunit/phpunit": "^7"
+    "phpunit/phpunit": "^7",
+    "codeception/codeception": "^2.4"
   }
 }
